--- a/css/common.css
+++ b/css/common.css
@@ -164,7 +164,60 @@ td {
 
 .section {
   padding: 42px;
-  margin-right: 500px;
+}
+
+.section-add {
+  padding: 42px;
+  position: absolute;
+  max-width: 1800px;
+  position: relative;
+  /* margin-right: 500px; */
+}
+
+
+.box-button {
+  margin-top: 80px;
+  width: 300px;
+  height: 62px;
+  border-left: 1px solid #e8e8e8;
+  /* background-color: #75af26; */
+  margin-left: 100px;
+
+  position: fixed;
+  right: 0;
+  top: 0;
+  align-items: flex-end;
+  justify-content: center;
+  display: flex;
+}
+
+
+.button {
+  width: 260px;
+  height: 32px;
+
+  color: rgba(0, 0, 0, .76);
+  background-color: #f5f5f5;
+  text-shadow: none;
+  box-shadow: none;
+
+    font-size: 14px;
+    font-weight: 400;
+    border-radius: 4px;
+    border: 1px solid #e8e8e8;
+
+}
+
+
+
+.main-section {
+  display: flex;
+  
+  /* flex-direction: row-reverse; */
+  /* width: 1200px; */
+  /* background-color: #FFF; */
+  /* margin: 40px auto; */
+  /* box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1); */
 }
 
 .title {
