--- a/css/common.css
+++ b/css/common.css
@@ -168,56 +168,49 @@ td {
 
 .section-add {
   padding: 42px;
-  position: absolute;
-  max-width: 1800px;
+  max-width: 2500px;
+}
+
+
+.box-right {
+  margin-top: 80px;
+  min-width: 300px;
+  min-height: 100%;
+  justify-content: center;
+  display: flex;
+  justify-content: center;
   position: relative;
-  /* margin-right: 500px; */
 }
 
 
 .box-button {
-  margin-top: 80px;
-  width: 300px;
+  padding-left: 16px;
+  padding-right: 16px;
   height: 62px;
   border-left: 1px solid #e8e8e8;
-  /* background-color: #75af26; */
-  margin-left: 100px;
-
-  position: fixed;
-  right: 0;
-  top: 0;
   align-items: flex-end;
   justify-content: center;
   display: flex;
+  position: fixed;
 }
 
 
 .button {
   width: 260px;
   height: 32px;
-
   color: rgba(0, 0, 0, .76);
   background-color: #f5f5f5;
   text-shadow: none;
   box-shadow: none;
-
-    font-size: 14px;
-    font-weight: 400;
-    border-radius: 4px;
-    border: 1px solid #e8e8e8;
-
+  font-size: 14px;
+  font-weight: 400;
+  border-radius: 4px;
+  border: 1px solid #e8e8e8;
 }
-
 
 
 .main-section {
   display: flex;
-  
-  /* flex-direction: row-reverse; */
-  /* width: 1200px; */
-  /* background-color: #FFF; */
-  /* margin: 40px auto; */
-  /* box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1); */
 }
 
 .title {
@@ -230,40 +223,37 @@ td {
 }
 
 .box {
-    border: 1px solid #e8e8e8;
-    border-radius: 4px;
-    padding: 10px 0 5px 30px;
-    margin: 2em 0;
+  border: 1px solid #e8e8e8;
+  border-radius: 4px;
+  padding: 10px 0 5px 30px;
+  margin: 2em 0;
   }
 
 
 .form-field {
   display: flex;
   align-items: center;
-  /* margin-bottom: 40px; */
 }
 
 
 .form-label-title {
-      color: rgba(0, 0, 0, .54);
-      line-height: 1.43;
-      letter-spacing: .51px;
-      width: 300px;
-
-      text-align: left;
-      flex: none;
+  color: rgba(0, 0, 0, .54);
+  line-height: 1.43;
+  letter-spacing: .51px;
+  width: 300px;
+  text-align: left;
+  flex: none;
 }
 
 .box-textarea {
-      border-bottom: 1px solid #e8e8e8;
-      width: 100%;
-      height: 40px;
-      padding-right: 5%;
-      padding-left: 20px;
-      overflow: hidden;
-      padding-top: 10px;
-        /* margin-left: 50px; */
-      }
+  border-bottom: 1px solid #e8e8e8;
+  width: 100%;
+  height: 40px;
+  padding-right: 5%;
+  padding-left: 20px;
+  overflow: hidden;
+  padding-top: 10px;
+}
 
 .box-textarea-last {
   border: none;
@@ -283,18 +273,16 @@ td {
   padding-left: 20px;
   overflow: hidden;
   padding-top: 10px;
-  /* margin-left: 50px; */
-
   display: flex;
   flex-wrap: wrap;
 }
 
 
 
-.box-textarea-last-123 {
+.box-textarea-last-note {
   border: 1px solid #e8e8e8;
   border-radius: 4px;
-  width: 95%;
+  width: 80%;
   margin-bottom: 8px;
   margin-top: 10px;
   min-height: 40px;
@@ -305,94 +293,57 @@ td {
 }
 
 
-
-
 .checkbox-channel {
   flex-basis: calc((100%) / 3);
-
-    color: rgba(0, 0, 0, .54);
-    line-height: 1.43;
-    letter-spacing: .51px;
+  color: rgba(0, 0, 0, .54);
+  line-height: 1.43;
+  letter-spacing: .51px;
   
 }
 
 .form-textarea {
-  /* height: 31px; */
   max-width: 100%;
   resize: none;
   color: rgba(0, 0, 0, .54);
   line-height: 1.43;
   letter-spacing: .51px;
-
   overflow: auto;
-  /* min-height: 32px !important; */
   white-space: pre-wrap;
-
   text-overflow: ellipsis;
   font-family: inherit;
-
   border: none;
   width: 95% !important;
 }
 
 
-
-.form-textarea-123 {
-  /* height: 31px; */
-  max-width: 100%;
-  /* resize: none; */
+.form-textarea-note {
   color: rgba(0, 0, 0, .54);
   line-height: 1.43;
   letter-spacing: .51px;
-
   overflow: auto;
-  /* min-height: 32px !important; */
   white-space: pre-wrap;
-
   text-overflow: ellipsis;
   font-family: inherit;
-
   border: none;
-  width: 95% !important;
 }
-
 
 
 .drop-list {
-    line-height: 1.5;
-    border: none;
-    width: 95% !important;
-    padding: 0;
-    color: rgba(0, 0, 0, .54);
-    line-height: 1.43;
-    letter-spacing: .51px;
+  line-height: 1.5;
+  border: none;
+  width: 95% !important;
+  padding: 0;
+  color: rgba(0, 0, 0, .54);
+  line-height: 1.43;
+  letter-spacing: .51px;
 }
 
 .calendar {
-      line-height: 1.5;
-        border: none;
-        width: 110px;
-        padding: 0;
-        color: rgba(0, 0, 0, .54);
-        line-height: 1.43;
-        letter-spacing: .51px;
-}
-
-
-
-
-/* input {
-  padding: 8px;
-  font: inherit;
-} */
-
-button {
-  padding: 8px 12px;
-  cursor: pointer;
-}
-
-.gallery {
-  list-style: none;
-  display: flex;
-  justify-content: space-around;
+  line-height: 1.5;
+  border: none;
+  width: 110px;
+  padding: 0;
+  color: rgba(0, 0, 0, .54);
+  line-height: 1.43;
+  letter-spacing: .51px;
 }
