--- a/css/common.css
+++ b/css/common.css
@@ -109,6 +109,7 @@ select {
     border: 1px solid #e8e8e8;
     border-radius: 4px;
     border-collapse: collapse;
+    margin-right: 20px;
 }
 
 thead {
@@ -206,6 +207,7 @@ td {
   font-weight: 400;
   border-radius: 4px;
   border: 1px solid #e8e8e8;
+  cursor: pointer;
 }
 
 
@@ -346,4 +348,14 @@ td {
   color: rgba(0, 0, 0, .54);
   line-height: 1.43;
   letter-spacing: .51px;
+}
+
+
+.note {
+    display: inline-block;
+    margin-right: 4px;
+    color: #f5222d;
+    font-size: 14px;
+    font-family: SimSun, sans-serif;
+    line-height: 1;
 }
