--- a/css/common.css
+++ b/css/common.css
@@ -187,11 +187,12 @@ td {
 .box-button {
   padding-left: 16px;
   padding-right: 16px;
-  height: 62px;
+  padding-top: 16px;
+  height: 104px;
   border-left: 1px solid #e8e8e8;
   align-items: flex-end;
   justify-content: center;
-  display: flex;
+  /* display: flex; */
   position: fixed;
 }
 
@@ -199,6 +200,7 @@ td {
 .button {
   width: 260px;
   height: 32px;
+  margin-top: 12px;
   color: rgba(0, 0, 0, .76);
   background-color: #f5f5f5;
   text-shadow: none;
@@ -315,6 +317,7 @@ td {
   font-family: inherit;
   border: none;
   width: 95% !important;
+  background-color: #fff;
 }
 
 
